More 3.0.0 tightening